--- a/package.json
+++ b/package.json
@@ -4,18 +4,31 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
+    "@react-native-ml-kit/text-recognition": "^1.5.2",
     "expo": "~52.0.40",
+    "expo-dev-client": "~5.0.14",
+    "expo-file-system": "~18.0.11",
+    "expo-image-manipulator": "~13.0.6",
+    "expo-image-picker": "~16.0.6",
+    "expo-media-library": "~17.0.6",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-vision-camera": "^4.6.4",
+    "react-native-worklets-core": "^1.5.0",
+    "tesseract.js": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
+    "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
 }
