--- a/package.json
+++ b/package.json
@@ -11,24 +11,38 @@
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
     "@react-native-ml-kit/text-recognition": "^1.5.2",
-    "expo": "~52.0.40",
+    "@react-navigation/native": "^7.0.19",
+    "expo": "~52.0.41",
     "expo-dev-client": "~5.0.14",
     "expo-file-system": "~18.0.11",
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.6",
     "expo-media-library": "~17.0.6",
     "expo-status-bar": "~2.0.1",
+    "framer-motion": "^12.6.0",
+    "lucide-react": "^0.484.0",
+    "lucide-react-native": "^0.484.0",
+    "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.6.4",
     "react-native-worklets-core": "^1.5.0",
-    "tesseract.js": "^6.0.0"
+    "react-tsparticles": "^2.12.2",
+    "tesseract.js": "^6.0.0",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-transform-private-methods": "^7.25.9",
-    "metro-react-native-babel-preset": "^0.77.0"
+    "metro-react-native-babel-preset": "^0.77.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
